--- a/src/input.css
+++ b/src/input.css
@@ -52,7 +52,7 @@ body {
   @apply text-xl font-medium text-white;
 }
 
-. .menu-link {
+.menu-link {
   position: relative;
   display: inline-block;
   transition: color 0.3s ease;
